# research

./: .gitignore  AGENTS.md  CLAUDE.md  CONTINUATION.md  README.md  agents.md  flawed.md
.agents/skills/ito-general/: SKILL.md
.agents/skills/ito-orchestrator/: SKILL.md
.agents/skills/ito-orchestrator-planner/: SKILL.md
.agents/skills/ito-orchestrator-researcher/: SKILL.md
.agents/skills/ito-orchestrator-reviewer/: SKILL.md
.agents/skills/ito-orchestrator-worker/: SKILL.md
.agents/skills/ito-planner/: SKILL.md
.agents/skills/ito-quick/: SKILL.md
.agents/skills/ito-researcher/: SKILL.md
.agents/skills/ito-reviewer/: SKILL.md
.agents/skills/ito-thinking/: SKILL.md
.agents/skills/ito-worker/: SKILL.md
.agents/skills/showboat/: SKILL.md
.claude/: session-start.sh  settings.json  settings.local.json
.claude/agents/: ito-general.md  ito-orchestrator-planner.md  ito-orchestrator-researcher.md  ito-orchestrator-reviewer.md  ito-orchestrator-worker.md  ito-orchestrator.md  ito-planner.md  ito-quick.md  ito-researcher.md  ito-reviewer.md  ito-thinking.md  ito-worker.md
.claude/commands/: ito-fix.md  ito-list.md  ito-project-setup.md
.claude/hooks/: ito-audit.sh
.claude/skills/ito-apply/: SKILL.md
.claude/skills/ito-commit/: SKILL.md
.claude/skills/ito-fix/: SKILL.md
.claude/skills/ito-list/: SKILL.md
.claude/skills/ito-orchestrate/: SKILL.md
.claude/skills/ito-path/: SKILL.md
.codex/commands/: ito-project-setup.md
.codex/instructions/: ito-audit.md  ito-skills-bootstrap.md
.codex/prompts/: ito-apply.md  ito-loop.md  ito-orchestrate.md  ito-proposal.md  ito-review.md  ito-update-repo.md  ito.md
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: ito-general.md  ito-orchestrator.md  ito-planner.md  ito-quick.md  ito-researcher.md  ito-reviewer.md  ito-thinking.md  ito-worker.md
.github/prompts/: ito-apply.prompt.md  ito-archive.prompt.md  ito-fix.prompt.md  ito-research.prompt.md  ito-update-repo.prompt.md  ito.prompt.md
.ito/: AGENTS.md  config.json  project.md  user-guidance.md
.ito/commands/: research-stack.md  research-synthesize.md  review-edge.md  review-scale.md  review-security.md
.ito/user-prompts/: apply.md  guidance.md  orchestrate.md  proposal.md  tasks.md
.opencode/agents/: ito-general.md  ito-orchestrator-planner.md  ito-orchestrator-researcher.md  ito-orchestrator-reviewer.md  ito-orchestrator-worker.md  ito-orchestrator.md  ito-planner.md  ito-quick.md  ito-researcher.md  ito-reviewer.md  ito-test-runner.md  ito-thinking.md  ito-worker.md
.opencode/commands/: ito-archive.md  ito-feature.md  ito-list.md  ito-loop.md  ito-orchestrate.md  ito-project-setup.md  ito-proposal-intake.md  ito-proposal.md  ito-research.md  ito-review.md  ito-update-repo.md
.opencode/plugins/: ito-skills.js
check-tools/: README.md  check_tools.py
durable-outbox-fastapi/: README.md  pyproject.toml
durable-outbox-fastapi/demos/: aspire-http-publisher.md
durable-outbox-fastapi/demos/scripts/: run_aspire_http_publisher_demo.sh
durable-outbox-fastapi/durable_outbox_fastapi/: __init__.py  app.py  config.py  service.py
durable-outbox-fastapi/integration/aspire/: README.md  aspire.config.json
durable-outbox-fastapi/integration/aspire/DurableOutbox.FastApi.Integration.AppHost/: DurableOutbox.FastApi.Integration.AppHost.csproj  Program.cs
durable-outbox-fastapi/integration/aspire/DurableOutbox.FastApi.Integration.AppHost/Properties/: launchSettings.json
durable-outbox-fastapi/tests/: test_app.py
durable-outbox-fastapi/tests/integration/: test_aspire_fastapi_publish.py
durable-outbox-python/: README.md  pyproject.toml  reusable_durable_outbox_rpo0_proposal.md
durable-outbox-python/demos/: aspire-azurite-kafka.md
durable-outbox-python/demos/scripts/: run_aspire_azurite_kafka_demo.sh
durable-outbox-python/docs/: architecture-review.md  data-model.md  durable-outbox-rpo0-proposal.md  multipass-review-2026-05-24.md  operations.md  plugin-authoring.md  providers.md
durable-outbox-python/docs/changes/: 2026-05-26-completed-ito-archive.md  2026-05-26-plugin-packaging-ito-archive.md
durable-outbox-python/docs/reviews/: multipass-review-2026-05-24.md  multipass-review-completion-audit-2026-05-26.md  multipass-review-decisions-2026-05-25.md
durable-outbox-python/durable_outbox/: __init__.py  operations.py  plugins.py
durable-outbox-python/durable_outbox/config/: __init__.py  settings.py
durable-outbox-python/durable_outbox/consumer/: __init__.py  dedupe.py
durable-outbox-python/durable_outbox/core/: __init__.py  admin.py  capabilities.py  claim.py  claim_token.py  cleanup.py  dispatcher.py  duplicates.py  errors.py  failover.py  model.py  ordering.py  retry.py  sink.py  store.py  time.py  validation.py
durable-outbox-python/durable_outbox/sinks/: __init__.py  file.py  kafka.py
durable-outbox-python/durable_outbox/stores/: __init__.py  azure_blob.py  blob_geo.py  cosmos.py  cosmos_azure.py  memory.py  sql.py  sql_pyodbc.py
durable-outbox-python/durable_outbox/telemetry/: __init__.py  metrics.py  tracing.py
durable-outbox-python/durable_outbox/testing/: __init__.py  clock.py  failure_injection.py  fake_sink.py  fake_store.py  provider_contract.py
durable-outbox-python/integration/aspire/: README.md  aspire.config.json
durable-outbox-python/integration/aspire/DurableOutbox.Integration.AppHost/: DurableOutbox.Integration.AppHost.csproj  Program.cs
durable-outbox-python/integration/aspire/DurableOutbox.Integration.AppHost/Properties/: launchSettings.json
durable-outbox-python/tests/: test_adapters.py  test_azure_blob_and_file_sink.py  test_consumer_dedupe.py  test_core.py  test_cosmos_azure.py  test_failover_ordering_cleanup.py  test_failure_load.py  test_kafka_operations.py  test_operations.py  test_packaging_docs.py  test_plugin_api.py  test_plugins.py  test_security.py  test_sql_pyodbc.py
durable-outbox-python/tests/integration/: test_aspire_azurite_kafka.py  test_azure_cosmos_live.py  test_sql_pyodbc_live.py
durable-outbox-python/tests/provider_contract/: test_fake_store_contract.py
(+269 files in other folders)
