[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "durable-outbox-fastapi"
version = "0.1.0"
description = "FastAPI HTTP publisher for durable-outbox."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Durable Outbox Maintainers" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "durable-outbox[azure,kafka]",
    "fastapi>=0.125.0",
    "pydantic>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.14.14",
    "ty>=0.0.25",
]

[tool.uv.sources]
durable-outbox = { path = "../durable-outbox-python", editable = true }

[tool.pytest]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
]
strict_xfail = true
filterwarnings = ["error"]
testpaths = ["tests"]
markers = [
    "integration: tests that require Aspire-managed services",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ANN",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B017", "ANN201"]

[tool.ruff.lint.isort]
known-first-party = ["durable_outbox_fastapi"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["durable_outbox_fastapi", "tests"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/durable_outbox_fastapi",
    "/tests",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["durable_outbox_fastapi"]
