[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "durable-outbox"
version = "0.1.0"
description = "Reusable durable outbox primitives for at-least-once publishing."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Durable Outbox Maintainers" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.6.0"]
azure = ["aiohttp>=3.13.0", "azure-storage-blob>=12.23.0", "azure-cosmos>=4.7.0"]
sql = ["pyodbc>=5.2.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "ty>=0.0.25",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
]
strict_xfail = true
filterwarnings = ["error"]
testpaths = ["tests"]
markers = [
    "load: fast local throughput and load-shape tests",
    "integration: tests that require external services or credentials",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ANN",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B017", "ANN201"]

[tool.ruff.lint.isort]
known-first-party = ["durable_outbox"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["durable_outbox", "tests"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/docs",
    "/durable_outbox",
    "/tests",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["durable_outbox"]
