[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "durable-outbox"
version = "0.1.0"
description = "Reusable durable outbox primitives for at-least-once publishing."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Durable Outbox Maintainers" }]
keywords = [
    "azure",
    "durable-outbox",
    "kafka",
    "rpo-zero",
    "transactional-outbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/withakay/research/tree/main/durable-outbox-python"
Documentation = "https://github.com/withakay/research/tree/main/durable-outbox-python/docs"
Repository = "https://github.com/withakay/research"
Issues = "https://github.com/withakay/research/issues"

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
    "azure-cosmos>=4.15.0",
    "azure-storage-blob>=12.29.0",
    "confluent-kafka>=2.14.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "ty>=0.0.25",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
]
strict_xfail = true
filterwarnings = ["error"]
testpaths = ["tests"]
markers = [
    "load: fast local throughput and load-shape tests",
    "integration: tests that require external services or credentials",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "SIM",
    "PERF",
    "PT",
    "S",
    "TCH",
    "UP",
    "ANN",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"durable_outbox/testing/provider_contract.py" = ["S101"]
"tests/**/*.py" = ["B017", "ANN201", "S101"]

[tool.ruff.lint.isort]
known-first-party = [
    "durable_outbox",
    "durable_outbox_blob_store",
    "durable_outbox_cosmos_store",
    "durable_outbox_file_sink",
    "durable_outbox_kafka_sink",
    "durable_outbox_memory_store",
    "durable_outbox_sql_store",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
    "durable_outbox",
    "packages/durable-outbox-blob-store/durable_outbox_blob_store",
    "packages/durable-outbox-cosmos-store/durable_outbox_cosmos_store",
    "packages/durable-outbox-file-sink/durable_outbox_file_sink",
    "packages/durable-outbox-kafka-sink/durable_outbox_kafka_sink",
    "packages/durable-outbox-memory-store/durable_outbox_memory_store",
    "packages/durable-outbox-sql-store/durable_outbox_sql_store",
    "tests",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
durable-outbox = { workspace = true }
durable-outbox-blob-store = { workspace = true }
durable-outbox-cosmos-store = { workspace = true }
durable-outbox-file-sink = { workspace = true }
durable-outbox-kafka-sink = { workspace = true }
durable-outbox-memory-store = { workspace = true }
durable-outbox-sql-store = { workspace = true }

[tool.uv.build-backend]
module-root = ""
module-name = "durable_outbox"
source-include = [
    "LICENSE",
    "README.md",
    "docs/**",
    "tests/**",
    "pyproject.toml",
]
